More landing page mockup, Learn more mockup, created app.js to experiment with anchor scrollTop

--- a/index.html
+++ b/index.html
@@ -26,10 +26,27 @@
         </nav>
         <div class="hero-text-box">
             <h1>Protect your Drinking Water <br> Learn &rsaquo; Test &rsaquo; Share</h1>
-            <a class="btn btn-full" href="#">Learn More</a>
+            <a class="btn btn-full" href="#learn-more">Learn More</a>
         </div>
     </header>
 
+    <section id="learn-more" class="learn-more">
+        <h2>Learn about the health impacts of lead in your drinking water</h2>
+        <div class="row">
+            <div class="col span-1-of-2 box">
+                <h3>How lead gets into drinking water</h3>
+                <img src="css/images/lead-into-water.png" alt="How lead gets into drinking water">
+            </div>
+            <div class="col span-1-of-2 box">
+                <h3>The health impacts of lead</h3>
+                <img src="css/images/health-impacts.png" alt="Health impacts of lead in drinking water">
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
