--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="client.js"></script>
 </body>
 
 </html>
