added next-steps section

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,30 @@
                 <img src="css/images/health-impacts.png" alt="Health impacts of lead in drinking water">
             </div>
         </div>
+        <a class="btn btn-full" href="#next-steps">Next Steps</a>
+    </section>
+
+    <section id="next-steps" class="next-steps">
+        <h2>Follow these steps to test your water and share your results</h2>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
+                <h3>Order test kit and test water</h3>
+                <a href="http://www.chicagowaterquality.org/index.html">Chicago Water Quality</a>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
+                <h3>Return here and signup/login</h3>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
+                <h3>Enter your data and compare</h3>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
+                <h3>Fix high results and Get Involved</h3>
+            </div>
+        </div>
     </section>
 
 
