--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <h1 class="logo">Community Water</h1>
                 <ul class="main-nav">
-                    <li><a href="#">Sign Up</a></li>
+                    <li class="signup"><a href="#">Sign Up</a></li>
                     <li class="login"><a href="#">Login</a></li>
                 </ul>
             </div>
@@ -31,8 +31,9 @@
     </header>
 
     <!--section for login modal-->
-    <section id="login" class="animated">
+    <section id="login">
         <div class="login-wrapper">
+            <h3>Log in</h3>
             <div class="login-close">
                 <button>&times;</button>
             </div>
@@ -43,6 +44,25 @@
                     <label>Password</label>
                     <input type="password" name="password" placeholder="Enter Password" required>
                     <button>Log In</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!--section for signup modal-->
+    <section id="signup">
+        <div class="signup-wrapper">
+            <h3>Sign Up</h3>
+            <div class="signup-close">
+                <button>&times;</button>
+            </div>
+            <div class="signup-form">
+                <form>
+                    <label>Username</label>
+                    <input type="text" name="username" placeholder="Enter Username" required>
+                    <label>Password</label>
+                    <input type="password" name="password" placeholder="Enter Password" required>
+                    <button>Sign In</button>
                 </form>
             </div>
         </div>
@@ -69,7 +89,7 @@
             <div class="col span-1-of-4 box">
                 <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
                 <h3>Order test kit and test water</h3>
-                <a href="http://www.chicagowaterquality.org/index.html">Chicago Water Quality</a>
+                <a href="http://www.chicagowaterquality.org/index.html" target="_blank">Chicago Water Quality</a>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
