--- a/public/index.html
+++ b/public/index.html
@@ -88,20 +88,20 @@
         <div class="row">
             <div class="col span-1-of-4 box">
                 <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
-                <h3>Order test kit and test water</h3>
+                <h3>Order your test kit</h3>
                 <a href="http://www.chicagowaterquality.org/index.html" target="_blank">Chicago Water Quality</a>
             </div>
             <div class="col span-1-of-4 box">
-                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
-                <h3>Return here and signup/login</h3>
+                <img src="css/images/next-step-dummy-img2.jpg" alt="Placeholder Image">
+                <h3>Return here &amp; signup/login</h3>
             </div>
             <div class="col span-1-of-4 box">
-                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
-                <h3>Enter your data and compare</h3>
+                <img src="css/images/next-step-dummy-img3.jpg" alt="Placeholder Image">
+                <h3>Enter your data &amp; compare</h3>
             </div>
             <div class="col span-1-of-4 box">
-                <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
-                <h3>Fix high results and Get Involved</h3>
+                <img src="css/images/next-step-dummy-img4.jpg" alt="Placeholder Image">
+                <h3>Get Involved</h3>
             </div>
         </div>
     </section>
