--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
                 <ul class="main-nav">
                     <li class="signup"><a href="#">Sign Up</a></li>
                     <li class="login"><a href="#">Login</a></li>
+                    <li class="hamburger"><a href="#"><i class="fas fa-bars"></i></a></li>
                 </ul>
             </div>
         </nav>
