--- a/public/users.html
+++ b/public/users.html
@@ -24,6 +24,7 @@
                 <ul class="main-nav">
                     <li class="back-home"><a href="#">Home</a></li>
                     <li class="logout"><a href="#">Log Out</a></li>
+                    <li class="hamburger"><a href="#"><i class="fas fa-bars"></i></a></li>
                 </ul>
             </div>
         </nav>
