added jquery for signup and login forms to capture user input

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                     <input type="text" name="username" id="login-username" placeholder="Enter Username" required>
                     <label for="login-password">Password</label>
                     <input type="password" name="password" id="login-password" placeholder="Enter Password" required>
-                    <button>Log In</button>
+                    <button type="submit" id="login-button">Log In</button>
                 </form>
             </div>
         </div>
@@ -64,7 +64,7 @@
                     <input type="text" name="username" id="signup-username" placeholder="Enter Username" required>
                     <label for="signup-password">Password</label>
                     <input type="password" name="password" id="signup-password" placeholder="Enter Password" required>
-                    <button>Sign In</button>
+                    <button type="submit" id="signup-button">Sign Up</button>
                 </form>
             </div>
         </div>
