--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
         <div class="row">
             <a href="#">About Us</a>
             <ul class="social-links">
-                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://github.com/mattCoppola" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
