--- a/public/index.html
+++ b/public/index.html
@@ -151,9 +151,9 @@
                                 <li>Red: Exceeds! Get Info!</li>
                             </ul>
                             <div class="col span-2-of-2 edit-results">
-                                <a class="btn btn-full add-results" href="#add-results">Add Results</a>
-                                <a class="btn btn-full update-results" href="#update-results">Update Results</a>
-                                <a class="btn btn-full delete-results" href="#delete-results">Delete Results</a>
+                                <a class="btn btn-full add-results" href="#add-results">Add</a>
+                                <a class="btn btn-full update-results" href="#update-results">Update</a>
+                                <a class="btn btn-full delete-results" href="#delete-results">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -174,6 +174,25 @@
                             <label for="five-minute">5 Minute</label>
                             <input type="text" name="five-minute" id="five-minute" placeholder=".99" required>
                             <button type="submit" id="results-button">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+            <section id="update-results">
+                <div class="update-wrapper">
+                    <h3>Update Results</h3>
+                    <div class="update-close">
+                        <button>&times;</button>
+                    </div>
+                    <div class="update-form">
+                        <form role="form">
+                            <label for="first-draw-update">1st Draw</label>
+                            <input type="text" name="first-draw-update" id="first-draw-update" placeholder=".99" required>
+                            <label for="three-minute-update">3 Minute</label>
+                            <input type="text" name="three-minute-update" id="three-minute-update" placeholder=".99" required>
+                            <label for="five-minute-update">5 Minute</label>
+                            <input type="text" name="five-minute-update" id="five-minute-update" placeholder=".99" required>
+                            <button type="submit" id="update-button">Submit</button>
                         </form>
                     </div>
                 </div>
