add jquery to page load - show landing page.  On login submit - hide landing page and show user dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,8 @@
         </div>
     </section>
 
+    <!--LANDING PAGE   -->
+
     <main role="main">
         <section id="learn-more" class="learn-more">
             <h2>Learn about the health impacts of lead in your drinking water</h2>
@@ -112,6 +114,10 @@
                 </div>
             </div>
         </section>
+    </main>
+
+    <!--USER DASHBOARD-->
+    <main>
         <section class="user-info">
 
             <nav role="navigation" id="user">
