--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
     <!--LANDING PAGE   -->
 
-    <main role="main">
+    <main role="main" class="hide-everything" id="landing-page">
         <section id="learn-more" class="learn-more">
             <h2>Learn about the health impacts of lead in your drinking water</h2>
             <div class="row">
@@ -117,7 +117,8 @@
     </main>
 
     <!--USER DASHBOARD-->
-    <main>
+
+    <main role="main" class="hide-everything" id="user-dashboard">
         <section class="user-info">
 
             <nav role="navigation" id="user">
