added delete form and functionality on the user dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,18 @@
                     </div>
                 </div>
             </section>
+
+            <section id="delete-results">
+                <div class="delete-wrapper">
+                    <h3>Delete Results?</h3>
+                    <div class="delete-close">
+                        <button>&times;</button>
+                    </div>
+                    <div class="delete-form">
+                        <button type="submit" id="delete-button">Confirm</button>
+                    </div>
+                </div>
+            </section>
         </section>
 
         <section class="map">
