--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
                     <fieldset>
                         <legend>Login Form</legend>
                         <label for="login-username">Username</label>
-                        <input type="text" name="username" id="login-username" placeholder="Enter Username" required>
+                        <input type="text" name="username" id="login-username" placeholder="Enter Username" value="demo" required>
                         <label for="login-password">Password</label>
-                        <input type="password" name="password" id="login-password" placeholder="Enter Password" required>
+                        <input type="password" name="password" id="login-password" placeholder="Enter Password" value="demo123" required>
                         <button type="submit" id="login-button">Log In</button>
                     </fieldset>
                 </form>
@@ -68,11 +68,11 @@
                     <fieldset>
                         <legend>Signup Form</legend>
                         <label for="signup-username">Username</label>
-                        <input type="text" name="username" id="signup-username" placeholder="Enter Username" required>
+                        <input type="text" name="username" id="signup-username" placeholder="Enter Username" value="demo" required>
                         <label for="signup-password">Password</label>
-                        <input type="password" name="password" id="signup-password" placeholder="Enter Password" required>
+                        <input type="password" name="password" id="signup-password" placeholder="Enter Password" value="demo123" required>
                         <label for="confirm-password">Confirm Password</label>
-                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" required>
+                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" value="demo123" required>
                         <button type="submit" id="signup-button">Sign Up</button>
                     </fieldset>
                 </form>
