success - ajax get call to api/results/:username -- upon the call success it fills out user info card. Still need to clean this up

--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,10 @@
                         </div>
                         <div>
                             <ul>
-                                <li>Name: Jen Jenkins</li>
-                                <li>Address: Chicago IL </li>
-                                <li>Results Average: 0.98</li>
+                                <li>Name: <span class="username"></span> </li>
+                                <li>Address: <span class="address"></span></li>
+                                <li>Results Average: <span class="resultAverage"></span></li>
+                                <li>Last Updated: <span class="lastUpdated"></span></li>
                             </ul>
                         </div>
                     </div>
